syntax = "proto3";

package users;

option go_package = "social-network/shared/gen/users;users";

import "common.proto";

service UserService {
  rpc GetBasicUserInfo (common.UserId) returns (BasicUserInfo);
}

message BasicUserInfo {
  string user_name = 1;
  string avatar = 2; // make this optional string as this is now a pointer. `optional string avatar = 2`;
  bool public_profile = 3;
}
